force-app/main/default/objects/StatusConfirmation__c/StatusConfirmation__c.object-meta.xml
<CustomObject>
    <description>Created By: Neha Aggrawal
Created Date: 06 Jan1020
User Story: https://jira.hyundai-autoever.eu/browse/GD-1026</description>
    <label>Vehicle Condition Report</label>
    <nameField>
        <displayFormat>SC-{YYYY}{MM}-{0000}</displayFormat>
        <label>NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Condition Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>