force-app/main/default/objects/StatusConfirmation__c/fields/Additional_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Additional_Service_Request__c</fullName>
    <label>Additional Service Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>