force-app/main/default/objects/StatusConfirmation__c/fields/BreakageContents__c.field-meta.xml
<CustomField>
    <fullName>BreakageContents__c</fullName>
    <label>Breakage Contents</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>