force-app/main/default/objects/StatusConfirmation__c/fields/Copy_of_Repair_Order__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Repair_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Repair Order</label>
    <type>Checkbox</type>
</CustomField>