force-app/main/default/objects/StatusConfirmation__c/fields/Custom_Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>Custom_Notification_Message__c</fullName>
    <formula>&quot;The &quot;+HYPERLINK(&quot;/lightning/r/StatusConfirmation__c/&quot;+Id+&quot;/view&quot;,Name)+&quot; light check in is performed for &quot;+
HYPERLINK(&quot;lightning/r/Repair__c/&quot;+ Repair__r.Id +&quot;/view&quot;, Repair__r.Name)+&quot; repair reservation.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Notification Message</label>
    <type>Text</type>
</CustomField>