force-app/main/default/objects/StatusConfirmation__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <formula>Repair__r.Vehicle__r.Account.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>