force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_CustomerSignature__c.field-meta.xml
<CustomField>
    <fullName>Delivery_CustomerSignature__c</fullName>
    <formula>IF (
ISBLANK(  Delivery_CustomerSignatureId__c ),
IMAGE(&quot;/resource/1550046204000/sign_empty&quot;, &quot;Signature&quot;, 100, 200),
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; +  Delivery_CustomerSignatureId__c + &quot;&amp;operationContext=S1&quot;,
&quot;Signature&quot;,
113,
300
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery - Customer Signature</label>
    <type>Text</type>
</CustomField>