force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Delivery_DateTime__c</fullName>
    <label>Delivery - DateTime</label>
    <type>DateTime</type>
</CustomField>