force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_DriverSignatureId__c.field-meta.xml
<CustomField>
    <fullName>Delivery_DriverSignatureId__c</fullName>
    <label>Delivery DriverSignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>