force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_Exterior_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Exterior_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery - Exterior Inspected</label>
    <type>Checkbox</type>
</CustomField>