force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_Interior_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Interior_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delivery - Interior Inspected</label>
    <type>Checkbox</type>
</CustomField>