force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_on_Behalf_SignatureId__c.field-meta.xml
<CustomField>
    <fullName>Delivery_on_Behalf_SignatureId__c</fullName>
    <label>Delivery on Behalf SignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>