force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_Outside_Check__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Outside_Check__c</fullName>
    <formula>IF (
ISBLANK( Delivery_OutsideCheckId__c ),
IMAGE(&quot;/resource/1550106869000/repair_car_empty&quot;, &quot;Outside Check&quot;, 410, 622),
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; +  Delivery_OutsideCheckId__c + &quot;&amp;operationContext=S1&quot;,
&quot;Outside Check&quot;,
410,
622
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery - Outside Check</label>
    <type>Text</type>
</CustomField>