force-app/main/default/objects/StatusConfirmation__c/fields/Delivery_Signer_Name_on_behalf__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Signer_Name_on_behalf__c</fullName>
    <label>Delivery - Signer Name on behalf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>