force-app/main/default/objects/StatusConfirmation__c/fields/DeliveryNotesfromValet__c.field-meta.xml
<CustomField>
    <fullName>DeliveryNotesfromValet__c</fullName>
    <label>Delivery - Notes from Valet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>