force-app/main/default/objects/StatusConfirmation__c/fields/DrivenDistance__c.field-meta.xml
<CustomField>
    <fullName>DrivenDistance__c</fullName>
    <label>Driven Distance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>