force-app/main/default/objects/StatusConfirmation__c/fields/FinalInspectionReportCommunication__c.field-meta.xml
<CustomField>
    <fullName>FinalInspectionReportCommunication__c</fullName>
    <label>Final Inspection Report Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone &amp; Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>