force-app/main/default/objects/StatusConfirmation__c/fields/fm_Icons__c.field-meta.xml
<CustomField>
    <fullName>fm_Icons__c</fullName>
    <formula>IMAGE(&quot;/resource/repair_img/scratch_image.png&quot;, $Label.RPR_LAB_Scratch, 40, 40) + $Label.RPR_LAB_Scratch + &quot;　　&quot;
+ IMAGE(&quot;/resource/repair_img/damage_image.png&quot;, $Label.RPR_LAB_Damage, 40, 40) + $Label.RPR_LAB_Damage + &quot;　　&quot;
+ IMAGE(&quot;/resource/repair_img/dent_image.png&quot;, $Label.RPR_LAB_Dent, 40, 40) + $Label.RPR_LAB_Dent + &quot;　　&quot;
+ IMAGE(&quot;/resource/repair_img/peeling_paint_image.png&quot;, $Label.RPR_LAB_Peeling_paint, 40, 40) +$Label.RPR_LAB_Peeling_paint + &quot;　　&quot;
+ IMAGE(&quot;/resource/repair_img/crack_image.png&quot;, $Label.RPR_LAB_Crack, 40, 40) + $Label.RPR_LAB_Crack+ &quot;　　&quot;
+ IMAGE(&quot;/resource/repair_img/etc_image.png&quot;, $Label.RPR_LAB_ETC, 40, 40) + $Label.RPR_LAB_ETC + &quot;　　&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icons</label>
    <type>Text</type>
</CustomField>