force-app/main/default/objects/StatusConfirmation__c/fields/fm_OutsideCheck__c.field-meta.xml
<CustomField>
    <fullName>fm_OutsideCheck__c</fullName>
    <formula>IF (
ISBLANK(OutsideCheckId__c),
IMAGE(&quot;/resource/1550106869000/repair_car_empty&quot;, &quot;Outside Check&quot;, 410, 622),
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; + OutsideCheckId__c + &quot;&amp;operationContext=S1&quot;,
&quot;Outside Check&quot;,
410,
622
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick up - OutsideCheck</label>
    <type>Text</type>
</CustomField>