force-app/main/default/objects/StatusConfirmation__c/fields/GDPR_Legal_Texts__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Legal_Texts__c</fullName>
    <label>GDPR Legal Texts</label>
    <type>TextArea</type>
</CustomField>