force-app/main/default/objects/StatusConfirmation__c/fields/Hanger_CSI_Customer_Satisfaction_Survey__c.field-meta.xml
<CustomField>
    <fullName>Hanger_CSI_Customer_Satisfaction_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hanger CSI(Customer Satisfaction Survey)</label>
    <type>Checkbox</type>
</CustomField>