force-app/main/default/objects/StatusConfirmation__c/fields/Is_Clear__c.field-meta.xml
<CustomField>
    <fullName>Is_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Clear</label>
    <type>Checkbox</type>
</CustomField>