force-app/main/default/objects/StatusConfirmation__c/fields/Legal_Texts__c.field-meta.xml
<CustomField>
    <fullName>Legal_Texts__c</fullName>
    <label>Legal Texts</label>
    <type>TextArea</type>
</CustomField>