force-app/main/default/objects/StatusConfirmation__c/fields/OilGuage__c.field-meta.xml
<CustomField>
    <fullName>OilGuage__c</fullName>
    <label>Oil Guage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>