force-app/main/default/objects/StatusConfirmation__c/fields/Pickup_Interior_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Interior_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup - Interior Inspected</label>
    <type>Checkbox</type>
</CustomField>