force-app/main/default/objects/StatusConfirmation__c/fields/Pickup_On_Behalf_SignatureId__c.field-meta.xml
<CustomField>
    <fullName>Pickup_On_Behalf_SignatureId__c</fullName>
    <label>Pickup On Behalf SignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>