force-app/main/default/objects/StatusConfirmation__c/fields/PickupNotesfromValet__c.field-meta.xml
<CustomField>
    <fullName>PickupNotesfromValet__c</fullName>
    <label>Pickup - Notes from Valet</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>