force-app/main/default/objects/StatusConfirmation__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <label>Repair</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Vehicle Condition Report</relationshipLabel>
    <relationshipName>Vehicle_Condition_Report</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>