force-app/main/default/objects/StatusConfirmation__c/recordTypes/Delivery.recordType-meta.xml
<RecordType>
    <fullName>Delivery</fullName>
    <active>true</active>
    <label>Delivery</label>
</RecordType>