force-app/main/default/objects/StatusConfirmation__c/recordTypes/NoLegal.recordType-meta.xml
<RecordType>
    <fullName>NoLegal</fullName>
    <active>true</active>
    <label>NoLegal</label>
</RecordType>